Partial Implementations of Pre-game stuff
- Added Config Commands
- Added shell for Spectate
- Added Countdown when player join
- Added checks and creation of worlds automatically
- Added reset ability
- Added pre-game countdown
- Started on while game running method
- Implemented Listeners disallowing damage pre-game
- Implemented Listeners to prevent players from moving away from spawn
while in game before game starts
- Bug Fixes
- Tons of other new stuff that I forgotten

--- a/SpeedChallenge/plugin.yml
+++ b/SpeedChallenge/plugin.yml
@@ -3,3 +3,51 @@ main: io.github.itachi1706.SpeedChallenge.Main
 version: 1
 description: A plugin for a speed challenge game
 author: itachi1706
+commands:
+  sc:
+    description: Main Plugin Command
+    usage: /sc
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  sc reset:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  scconfig:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  scconfig gamemode:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  scconfig pvp:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  scconfig respawn:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  scconfig list:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+  spectate:
+    description: Resets Game
+    usage: /sc reset
+    permission: sc.debug
+    permission-message: You do not have permission to do this command
+permissions:
+  sc.debug:
+    description: Debug
+    default: true
+  sc.override:
+    description: Allows overriding of stuff
+    default: op
