--- a/StaffMember/plugin.yml
+++ b/StaffMember/plugin.yml
@@ -1,6 +1,6 @@
 name: StaffMember
 main: io.github.itachi1706.StaffMember.Main
-version: 1.1
+version: 1.2
 description: A plugin for listing staff members and staff tools
 author: itachi1706
 commands:
@@ -20,6 +20,11 @@ commands:
     usage: /stafflist
     permission: staffmember.default
     permission-message: You do not have permission to do this command.
+  mojang:
+    description: Mojang Servers
+    usage: /mojang status
+    permission: staffmember.default
+    permission-message: You do not have permission to do this command
 permissions:
   staffmember.isstaff:
     description: If user is a staff member
