Added a command to check a player's premium status
- Other bug fixes

--- a/SpeedChallenge/.classpath
+++ b/SpeedChallenge/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/HeroChat-5.6.7.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx-1.20.4.jar"/>
 	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/TagAPI-2.7.1.jar"/>
 	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/WorldEdit.jar">
 		<attributes>
@@ -20,5 +19,6 @@
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
