--- a/Banception/plugin.yml
+++ b/Banception/plugin.yml
@@ -1,7 +1,7 @@
 name: Banception
 main: io.github.itachi1706.Banception.Main
-version: 1.2
-description: A ban/mute/kick plugin
+version: 1.3
+description: A ban/mute/kick/log plugin
 author: itachi1706
 depend: [SQLibrary]
 commands:
