--- a/JukeboxSequence/plugin.yml
+++ b/JukeboxSequence/plugin.yml
@@ -1,12 +1,12 @@
 name: JukeboxSequence
 main: io.github.itachi1706.JukeboxSequence.Main
-version: 1.3
+version: 1.7
 description: An loop for jukeboxes
 author: itachi1706
 commands:
   js:
     description: Main Plugin Command
-    usage: /js reload
+    usage: /js reload/stop/start/debug/status
     permission: jukeboxsequence.staff
     permission-message: You do not have permission to do this command
     aliases: [jukeboxsequence]
@@ -20,6 +20,7 @@ commands:
     usage: /fixsong
     permission: jukeboxsequence.staff
     permission-message: You do not have permission to do this command
+    aliases: [skipsong]
 permissions:
   jukeboxsequence.default:
     description: Default command
