--- a/PEXHelper/.classpath
+++ b/PEXHelper/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
