--- a/SpeedChallenge/.classpath
+++ b/SpeedChallenge/.classpath
@@ -14,11 +14,11 @@
 			<attribute name="javadoc_location" value="http://ci.onarandombox.com/job/Multiverse-Core/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
