--- a/CheesecakeLogger/plugin.yml
+++ b/CheesecakeLogger/plugin.yml
@@ -1,6 +1,6 @@
 name: CheesecakeLogger
 main: io.github.itachi1706.CheesecakeLogger.Main
-version: 0.0.3beta9
+version: 0.0.3
 description: A logging plugin
 author: itachi1706
 depend: [SQLibrary]
