--- a/CheesecakeMinigameLobby/plugin.yml
+++ b/CheesecakeMinigameLobby/plugin.yml
@@ -1,6 +1,6 @@
 name: CheesecakeMinigameLobby
 main: io.github.itachi1706.CheesecakeMinigameLobby.Main
-version: 1.7
+version: 1.8 dev 2
 description: An internal plugin for minigame server
 author: itachi1706
 commands:
@@ -46,6 +46,30 @@ commands:
     usage: /burn [player]
     permission: cheesecakeminigamelobby.abilities.burn
     permission-message: You do not have permission to do this command
+  gmc:
+    description: Sets a player to Creative Mode
+    usage: /gmc [player]
+    permission: cheesecakeminigamelobby.gamemode.creative
+    permission-message: You do not have permission to do this command
+    aliases: [doge]
+  gma:
+    description: Set a player to Adventure Mode
+    usage: /gma [player]
+    permission: cheesecakeminigamelobby.gamemode.adventure
+    permission-message: You do not have permission to do this command
+    aliases: [doge]
+  gms:
+    description: Set a player to Survival Mode
+    usage: /gms [player]
+    permission: cheesecakeminigamelobby.gamemode.survival
+    permission-message: You do not have permission to do this command
+    aliases: [doge]
+  gm:
+    description: Changes Gamemode of a player
+    usage: /gm <gamemode> [player]
+    permission: cheesecakeminigamelobby.gamemode.all
+    permission-message: You do not have permission to do this command
+    aliases: [doge]
   wow:
     description: Doges a player
     usage: /wow [player]
@@ -56,6 +80,18 @@ permissions:
   cheesecakeminigamelobby.default:
     description: Default command
     default: true
+  cheesecakeminigamelobby.gamemode.creative:
+    description: Changes gamemode
+    default: op
+  cheesecakeminigamelobby.gamemode.survival:
+    description: Changes gamemode
+    default: op
+  cheesecakeminigamelobby.gamemode.adventure:
+    description: Changes gamemode
+    default: op
+  cheesecakeminigamelobby.gamemode.all:
+    description: Changes gamemode
+    default: op
   cheesecakeminigamelobby.abilities.fly:
     description: Fly Command
     default: op
