--- a/NickNamer/plugin.yml
+++ b/NickNamer/plugin.yml
@@ -1,8 +1,9 @@
 name: NickNamer
 main: io.github.itachi1706.NickNamer.Main
-version: 1.3
+version: 1.4
 description: A plugin to nick into other players
 author: itachi1706
+depend: [TagAPI]
 commands:
   nick:
     description: Nicks player or other players nicknames
