--- a/NickNamer/.classpath
+++ b/NickNamer/.classpath
@@ -8,6 +8,10 @@
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/TagAPI-3.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/TagAPI-3.0.2.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://kittehorg.github.io/TagAPI/apidocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
