--- a/Banception/.classpath
+++ b/Banception/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/sqlite-jdbc4-3.8.2-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/SQLibrary-7.1.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/sqlite-jdbc4-3.8.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/SQLibrary-7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
