--- a/FTBOPJoinAnnounce/.classpath
+++ b/FTBOPJoinAnnounce/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.2-R0.3-20140106.202257-6.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/bukkit-1.7.2-R0.3-20140106.202257-6.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
