--- a/MemberSigns/.classpath
+++ b/MemberSigns/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/PermissionsEx.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
