--- a/Monopoly/.classpath
+++ b/Monopoly/.classpath
@@ -2,18 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/WorldEdit.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/WorldEdit.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://docs.sk89q.com/worldedit/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/sqlite-jdbc-3.7.2.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/sqlite-jdbc-3.7.2.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/D:/Development/Bukkit/DL/Bukkit%20API/sqlite-jdbc-3.7.2-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/SQLibrary-7.1.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/SQLibrary-7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/bukkit-1.7.5-R0.1-20140408.014432-7.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
