--- a/SpeedChallenge/.classpath
+++ b/SpeedChallenge/.classpath
@@ -2,20 +2,20 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/HeroChat-5.6.7.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/TagAPI-2.7.1.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/WorldEdit.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/HeroChat-5.6.7.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/TagAPI-2.7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/WorldEdit.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://docs.sk89q.com/worldedit/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/Multiverse-Core-2.5.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/Multiverse-Core-2.5.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://ci.onarandombox.com/job/Multiverse-Core/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/PermissionsEx.jar"/>
-	<classpathentry kind="lib" path="D:/Development/Bukkit/DL/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/PermissionsEx.jar"/>
+	<classpathentry kind="lib" path="/Users/Kenneth/Documents/Development/Bukkit API/bukkit-1.7.10-R0.1-20140808.005150-4.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
